--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -129,6 +129,7 @@ todaytasks = Tasks for today
 
 addmilestone = Add Milestone
 currentmiles = Current Milestones
+upcomingmiles = Upcoming milestones
 donemilestones = Done Milestones
 due = Due
 editmilestone = Edit Milestone
